# focg

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: push-build.yml
conan/: conanfile.py
conan/test_package/: conanfile.py
conan/workspaces/: CMakeLists.txt  default.yml
src/: CMakeLists.txt
src/apps/ch3/exercise-raster_images/: BayerPattern.h  CMakeLists.txt  main.cpp
src/apps/ch4/ray_tracer/: CMakeLists.txt  Hit.h  Intersect.h  Light.h  Material.h  Ray.h  RayTracer.h  Scene.h  Shading.h  Sphere.h  Surfaces.cpp  Surfaces.h  View.h  main.cpp
src/apps/ch5/rasterizer_wireframe/: CMakeLists.txt  DrawLine.h  main.cpp
src/apps/ch7/rasterizer_wireframe/: CMakeLists.txt  DrawLine.h  Line.h  Rasterize.h  Scene.h  Transformations.h  main.cpp
src/apps/ch8/01-basic_pipeline/: CMakeLists.txt  Clipping.h  GraphicsPipeline.h  Line.h  NaivePipeline.h  ObjLoader.h  Rasterization.h  Scene.h  Shaders.h  Triangle.h  main.cpp
src/apps/ch8/02-graphics_pipeline/: CMakeLists.txt  Clipping.h  GraphicsPipeline.h  Line.h  ObjLoader.h  ObjModels.h  Rasterization.h  Scene.h  Shaders.h  ShadingRenderer.h  Triangle.h  main.cpp
src/apps/ch8/graphics_pipeline/: CMakeLists.txt  Clipping.h  GraphicsPipeline.h  Line.h  MidpointAlgorithm.h  NaivePipeline.h  ObjLoader.h  ObjModels.h  Rasterization.h  Scene.h  Shaders.h  ShadingRenderer.h  Triangle.h  main.cpp
src/apps/ch9/01-convolution_tests/: CMakeLists.txt  Convolution.h  Convolution_tests.cpp  Filters.h  Reconstruction.h  Reconstruction_tests.cpp
src/apps/ch9/02-image_filtering/: CMakeLists.txt  main.cpp
src/apps/exercises/ch3-raster_images/ch3-raster_images/: BayerPattern.h  CMakeLists.txt
src/libs/focg-assets/focg-assets/: Assets.h  CMakeLists.txt  build_config.h.in
