add_subdirectory(libs/focg-assets/focg-assets)

add_subdirectory(apps/ch3/exercise-raster_images)
add_subdirectory(apps/ch4/ray_tracer)
add_subdirectory(apps/ch7/rasterizer_wireframe)
add_subdirectory(apps/ch8/01-basic_pipeline)
add_subdirectory(apps/ch8/02-graphics_pipeline)
add_subdirectory(apps/ch9/01-convolution_tests)
add_subdirectory(apps/ch9/02-image_filtering)
